# private-voice-mail

./: docker-compose.yaml
backend/: go.mod  main.go
backend/audio/: audio.go  controller.go  service.go
frontend/: .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/app/: root.tsx  tailwind.css
frontend/app/components/: audio-recorder.tsx
frontend/app/routes/: _index.tsx
grpc-proto/: stt.proto
stt-backend/: .gitignore  Makefile  main.py  pyproject.toml  requirements.txt
stt-backend/adapters/inbound/: grpc_server.py  rabbitmq_server.py
stt-backend/adapters/outbound/: grpc_client.py  rabbitmq_client.py  request_service.py  stt_service_whisper.py
stt-backend/core/exceptions/: request_exception.py
stt-backend/core/model/: stt.py
stt-backend/core/ports/: audio_service.py  request_service.py  stt_service.py
stt-backend/core/services/: audio_service.py  request_service.py  stt_service.py
stt-backend/src/: main.py
stt-backend/src/rpc/: client.py  server.py
stt-backend/src/rpc/protobuf/: stt_pb2_grpc.py
